Fix footer position on IE

--- a/html/css/theme-oc.css
+++ b/html/css/theme-oc.css
@@ -3957,7 +3957,8 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  justify-content: space-between; }
+  justify-content: space-between;
+  padding: 0; }
 
 a {
   color: var(--primary-color);
@@ -3977,7 +3978,8 @@ svg {
   flex-direction: column; }
 
 .page-content {
-  flex: 1;
+  width: 100%;
+  min-height: 100vh;
   margin-top: 60px;
   display: flex;
   flex-direction: column;
@@ -6952,7 +6954,7 @@ ol.list {
   top: 0;
   bottom: 0;
   z-index: 1032;
-  margin-left: -195px; }
+  right: 1px; }
   .notification-menu .show-menu {
     display: block; }
   .notification-menu .notification-header {
