--- a/sass/utilities/base.scss
+++ b/sass/utilities/base.scss
@@ -49,6 +49,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   justify-content: space-between;
+  padding: 0;
 }
 
 a {
@@ -71,7 +72,9 @@ svg {
   flex-direction: column;
 }
 .page-content {
-  flex: 1;
+  width: 100%;
+  min-height: 100vh;
+  // flex: 1;
   margin-top: 60px;
   display: flex;
   flex-direction: column;
